Fixed issue of overlapping image and description by changing image from fixed width.

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -120,7 +120,7 @@ nav > .container {
 }
 
 .product-image {
-    width: 320px;
+    max-width: 100%;
     border: 1px solid #eee;
 }
 
